# tabulate

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  example-formatted.txt  example.txt  example_cjk-formatted.txt  example_cjk.txt  requirements.txt
benches/: complete_user_widths.rs
docs/: column_planner.md  synopsis.md
example-texts/: lipsum.txt  lipsum_zh.txt
examples/: example-formatted.txt  lipsum.txt  lipsum_escape.txt
src/: column_planner.rs  core.rs  io.rs  lib.rs  main.rs  table.rs  table_renderers.rs  tabulate  textmltab  try_wrap.rs  ui.rs
