[package]
name = "tabulate"
version = "0.2.0"
authors = ["Kaiwen Wu <kps6326@hotmail.com>"]
description = "Multiline fixed-width plaintext table generator"
repository = "https://github.com/kkew3/tabulate"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
textwrap = { version = "0.16", features = ["terminal_size", "hyphenation"] }
hyphenation = "0.8.4"

[dev-dependencies]
proptest = "1.5"
const_format = "0.2"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
