[package]
name = "tabulate"
version = "0.3.0"
authors = ["Kaiwen Wu <kps6326@hotmail.com>"]
description = "Multiline fixed-width plaintext table generator"
repository = "https://github.com/kkew3/tabulate"
readme = "README.md"
license = "MIT"
edition = "2021"

[[bench]]
name = "complete_user_widths"
harness = false

[dependencies]
textwrap = { version = "0.16", features = ["terminal_size"] }
clap = { version = "4.5.17", features = ["derive"] }

[dev-dependencies]
proptest = "1.5"
const_format = "0.2"
criterion = "0.5"
lipsum = "0.9"
rand_chacha = "0.3.1"
textwrap = { version = "0.16", features = ["terminal_size", "hyphenation"] }
hyphenation = "0.8.4"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

[features]
bench-brute = []
bench-bisect = []
